도구 사용 노드 뒤에 도구 출력 처리 노드하는 구성으로 진행 중. 동작이 기대에 미치지 못함.

--- a/notebook/240710.ipynb
+++ b/notebook/240710.ipynb
@@ -2491,6 +2491,26 @@
     "                      config)\n",
     "output"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'change_order'"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output[\"messages\"][-2].name"
+   ]
   }
  ],
  "metadata": {
