consumer 코드 수정 중. 주석 처리한 부분 삭제 전.

--- a/notebook/240719.ipynb
+++ b/notebook/240719.ipynb
@@ -167,6 +167,31 @@
     "        else:\n",
     "            raise ValueError(f\"Unhandled message type: {message}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'dict' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(kwargs)\n\u001b[0;32m      4\u001b[0m dict_from_json \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmessage\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhi\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morder_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m3\u001b[39m}\n\u001b[1;32m----> 5\u001b[0m \u001b[43mdict_from_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdict_from_json\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'dict' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "def dummy(**kwargs):\n",
+    "    print(kwargs)\n",
+    "\n",
+    "dict_from_json = {\"message\": 'hi', \"order_id\": 3}\n",
+    "dict_from_json(dict_from_json)"
+   ]
   }
  ],
  "metadata": {
