클라이언트로부터 받는 데이터 관리, 사용자 인터페이스 처리 부분 함수화, 그래프 결과 생성 함수화, 클라이언트로 보낼 데이터 json 직렬화 작업 함수화

--- a/notebook/240719.ipynb
+++ b/notebook/240719.ipynb
@@ -95,6 +95,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None 123\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_response(config, **kwargs):\n",
+    "    if not kwargs:\n",
+    "        kwargs = None\n",
+    "    print(kwargs, config)\n",
+    "\n",
+    "generate_response(config=\"123\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (3149473958.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[10], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    generate_response(config=\"123\", None)\u001b[0m\n\u001b[1;37m                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_response(config, **kwargs):\n",
+    "    print(kwargs, config)\n",
+    "\n",
+    "generate_response(config=\"123\", None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool({})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
